# BarbariaGame

./: .gitignore  CMakeLists.txt  DependenciesToBuild  README.md  Untitled Diagram.drawio  barbaria.py  ext_decl.cpp  ext_decl.h  extern_world.h  game.cpp  game.h  main.cpp  projectstructure.drawio
api/: loader.cpp  loader.h
api/java/: java.cpp  java.h
api/lua/: lua.h
api/python/: python.cpp  python.h
engine/: buffers.cpp  buffers.h  camera.cpp  camera.h  ext_decl.cpp  ext_decl.h  model.cpp  model.h  shader.cpp  shader.h
engine/core/: buffers.cpp  buffers.h  camera.cpp  camera.h  shader.cpp  shader.h
engine/graphics/: buffers.cpp  buffers.h  camera.cpp  camera.h  cubeObject.cpp  cubeObject.h  model.cpp  model.h  object.cpp  object.h  shader.cpp  shader.h  texture.cpp  texture.h
engine/graphics/geometry/: cubeobject.cpp  cubeobject.h
engine/lightning/: ambient.h  diffuse.h  source.h  specular.cpp  specular.h
engine/networking/: client.h  server.h
engine/utils/: time.h
game/: game.cpp  game.h
game/blocks/: block.h
game/camera/: camera.cpp  camera.h  framebuffer.cpp  framebuffer.h  inputs_global.h
game/camera/movement/: keyboard.cpp  keyboard.h  mouse.cpp  mouse.h
game/entities/: entity.h
game/entity/: entity.h  mob.h  player.h
game/gui/: inventory.h  mainscreen.cpp  mainscreen.h
game/input/: keyboard.cpp  keyboard.h  mouse.cpp  mouse.h
game/loading/: loop.h  post.h  pre.cpp  pre.h
game/utils/: controls.cpp  controls.h  declarations.cpp  declarations.h  time.cpp  time.h
game/windows/: framebuffer.h  gamewindow.cpp  gamewindow.h
game/world/: block.cpp  block.h  chunk.cpp  chunk.h  world.cpp  world.h
game/world/factions/: faction.h
game/world/factions/lotr/: barrow_wights.cpp  barrow_wights.h  corsairs.cpp  corsairs.h  dol_guldur.cpp  dol_guldur.h  dorwinions.cpp  dorwinions.h  dunedain_north.cpp  dunedain_north.h  dunlending.cpp  dunlending.h  dwarves.cpp  dwarves.h  easterlings.cpp  easterlings.h  ents.h  gondorians.cpp  gondorians.h  gundabad.cpp  gundabad.h  high_elves.cpp  high_elves.h  hobbits.cpp  hobbits.h  huorns.cpp  huorns.h  isengard.cpp  isengard.h  lossoth.cpp  lossoth.h  mordor.cpp  mordor.h  moria_orcs.cpp  moria_orcs.h  rohirrim.cpp  rohirrim.h  southrons.cpp  southrons.h  variags.cpp  (+3 more)
game/world/generation/: chunk_generator.cpp  chunk_generator.h  climate_zones.cpp  climate_zones.h
game/world/world/: block.h  chunk.cpp  chunk.h
resources/: mods.info
resources/shaders/objects_default/: FragmentShader.glsl  VertexShader.glsl
shaders/: FragmentShader.glsl  VertexShader.glsl
